<resources>
    <string name="app_name">phase1</string>
    <string name="welcome">Welcome</string>
    <string name="input_username">Please enter user name</string>
    <string name="input_password">Please enter password</string>
    <string name="PleaseLogin">Please login first</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="PleaseRegister">Please register here</string>
    <string name="input_password1">Please enter password</string>
    <string name="input_password2">Please enter password again</string>
    <string name="defence">Defence :</string>
    <string name="your_gpa">Your GPA :</string>
    <string name="attack">Attack</string>
    <string name="flexibility">Flexibility</string>
    <string name="luckiness">Luckiness</string>
    <string name="Flexibility">Flexibility:</string>
    <string name="Defence">Defence:</string>
    <string name="Luckiness">Luckiness:</string>
    <string name="Attack">Attack:</string>
    <string name="Life">Life:</string>
</resources>
