<?xml version="1.0" encoding="utf-8"?>
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:id="@+id/screen"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:background="@drawable/background_login">-->

<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:id="@+id/background"-->
<!--        android:src="@drawable/forest_background"-->
<!--        android:scaleType="centerCrop" />-->

<!--    <ImageView-->
<!--        android:id="@+id/imageView1"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="200dp"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_centerVertical="true"-->
<!--        android:src="@drawable/bat_brains_6" />-->

<!--</RelativeLayout>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stage1.g1Activity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background_login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350px"
        android:background="@drawable/background_login"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="3"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:text="@string/Life"
                android:textSize="40px"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/your_attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:text="@string/Attack"
                android:textSize="40px"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/attack_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:text="@string/attack"
                android:textSize="40px"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/your_defence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_margin="10dp"
                android:text="@string/Defence"
                android:textSize="40px"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/defence_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="3"
                android:layout_margin="10dp"
                android:text="@string/attack"
                android:textSize="40px"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/your_flexibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:text="@string/Flexibility"
                android:textSize="40px"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/your_luckiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_margin="10dp"
                android:text="@string/Luckiness"
                android:textSize="40px"
                android:textStyle="bold" />
        </GridLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/frame"
        android:layout_width="1080px"
        android:layout_height="1080px"
        android:background="@drawable/forest_background"
        android:scaleType="centerCrop">

        <ImageView
            android:id="@+id/box"
            android:layout_width="72px"
            android:layout_height="72px"
            android:layout_below="@+id/mos"
            android:layout_marginTop="16dp"
            android:src="@drawable/g1_player_front" />

        <ImageView
            android:id="@+id/mos"
            android:layout_width="72px"
            android:layout_height="72px"
            android:src="@drawable/g1_utoronto" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        >

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="3"
            android:background="#C0C0C0">


            <Button
                android:id="@+id/upBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/attack" />

            <Button
                android:id="@+id/leftBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Left"
                android:layout_column="0"
                android:layout_row="1"/>

            <Button
                android:id="@+id/rightBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Right"
                android:layout_column="2"
                android:layout_row="1"/>

            <Button
                android:id="@+id/downBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Down"
                android:layout_column="1"
                android:layout_row="2"/>
        </GridLayout>

    </LinearLayout>
</LinearLayout>